# semantic-shelf

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  run_manual_calc.py  verify_docker.sh
.roo/: mcp.json
__.clinerules/: 10-pylance-python.md  README.md
docs/: books.md  domain-modeling-core.md  domain-modeling-eval-anchors.md  domain-modeling-implementation-plan.md  domain-modeling-job-compute-neighbors.md  domain-modeling-recs-jobs.md  eval-domain-centralization-implementation.md  eval-domain-centralization.md  eval-platform-0.md  eval-platform-1.md  eval-platform-4.md  eval-platform-5.md  eval-platform-6-3.md  eval-platform-6-4.md  eval-platform-6-5.md  eval-platform-6-6.md  eval-platform-6.md  eval-platform-index.md  eval-platform-staged.md  eval-platform-test-strategy.md  eval-platform.md  eval-run-script-design.md  openapi.json  python-mcp-server-setup.md  reqs-v0.md  similar-books-limit-validation-refactor-plan.md  similar-books-phase1-plan.md  similar-books-plan.md  similar-books.md  users-gpt.md  users-plan.md  users-reqs-v0.md  users.md
eval/: anchors.py  baseline.py  compare.py  domain.py  errors.py  evaluator.py  loadgen.py  metrics.py  policies.py  rendering.py  repositories.py  slicing.py  telemetry.py
migrations/: env.py
plans/: eval-platform-6-7-2.md  eval-platform-6-phase-c.md  eval-platform-6-phase-d.md  eval-platform-6-phase-e.md
scenarios/: similar_books_paired.yaml  similar_books_perf.yaml  similar_books_smoke.yaml  slices.yaml
scripts/: __init__.py  ci_eval.py  (+13 more)
(+126 files in other folders)
